V
* features
-
* bug fixes
-
* known bugs
-

V 1.1.0
* features
- Choose hybrid or map map view
- Changelog
* bug fixes
- Camera crashes on some devices
- Clear map marker after submit
* known bugs
-