@@ -6,6 +6,14 @@ V
 * known bugs
 -
 
+V
+* features
+- Get lat/lon from image when send from gallery
+* bug fixes
+- Zoom in on marker not current position
+* known bugs
+-
+
 V 1.1.0
 * features
 - Choose hybrid or map map view
